@@ -57,6 +57,11 @@
       <xs:group ref="tns:GroupFullSelect">
       </xs:group>
     </xs:sequence>
+    <xs:attribute name="url" type="xs:string" use="optional">
+      <xs:annotation>
+        <xs:documentation>Custom WrsServlet path relatively to contextPath</xs:documentation>
+      </xs:annotation>
+    </xs:attribute>
     <xs:anyAttribute namespace="##other" processContents="lax" />
   </xs:complexType>
 
@@ -327,11 +332,6 @@
   <xs:complexType name="TypeBindingSet">
     <xs:simpleContent>
       <xs:extension base="xs:NCName">
-        <xs:attribute name="url" type="xs:string" use="optional">
-          <xs:annotation>
-            <xs:documentation>Custom WrsServlet path relatively to contextPath</xs:documentation>
-          </xs:annotation>
-        </xs:attribute>
         <xs:attribute name="alias" type="bnd:AttrTypeSimpleId" use="optional">
           <xs:annotation><xs:documentation>Can be referenced in bRefs like alias.bRefName and in wrq:Ref/@alias</xs:documentation></xs:annotation>
         </xs:attribute>
