@@ -28,6 +28,7 @@ and needs also to be updated sql expression strings compiled with SQLEngine::tra
 * removed bcdBean creationStamp, use bcdBean.currentTimestampUtc instead which is the date string in UTC timezone
 * bcd_virtualFileSystem additionally got vfsPathLimit SubjectFilter which limits read/write access on the VFS. Ensure to add user rights (or default values) for:
 at least cube template writing /vfs/reports/*, detail export column selects /vfs/exports/*, docUploads /vfs/documents/*. Writing vfs bindings could be achieved via /WEB-INF/*/virtual/*.
+* WRS request optional url attribute at bindingSet to pick servlet is moved to root WrsRequest element
 
 .Server:
 * Wrq does support CTE common table expressions, joins and unions now
